---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 16.08.2022
  Compatibility:
    - Updated Jetpack-Check (0.1.5) to only "flying", not "hovering in space"
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 25.07.2022
  Fixes:
    - Fixed a crash when the surface is switched and the stored schedule contains a temporary stop
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 15.07.2022
  Fixes:
    - Fixed a crash when a rail below a temporary stop is removed, and the schedule is kept
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 11.07.2022
  Changes:
    - Enable keeping the motorcars' schedule as a mod setting per user
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 20.06.2022
  Changes:
    - Added compatibility for RenaiTransportation
    - Ignored "Super locomotive" from Editor Extension for dynamic motor cars (created by 0.3.0)
  Fixes:
    - Fixed game crash when pressing <rotate> immediately after the motor car was destroyed
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 29.05.2022
  Changes:
    - Decreased braking force to prevent gate crashes on full speed
    - When a spidertron stands on top of the rails, entering is preferred over the motor car.
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 30.04.2022
  Fixes:
    - Fixed wrong icons
    - Fixed exceptions from missing data
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 30.04.2022
  Fixes:
    - Fixed missing icon definition