@@ -1,14 +1,5 @@
 local compatibility = {}
 
-function compatibility.ignore_vehicle(name)
-  -- RT: ignore dummy for jumping
-  if game.active_mods["RenaiTransportation"] and name == "RTPropCar" then
-    return true
-  end
-
-  return false
-end
-
 -- check if mounting is allowed
 --- @param player LuaPlayer
 function compatibility.can_mount(player)
